fix:search keep state when switching to render view, flickering issues

--- a/Frontend/src/app/modules/search/search.component.scss
+++ b/Frontend/src/app/modules/search/search.component.scss
@@ -187,7 +187,7 @@ es-sort-dropdown {
     top: 0;
     width: 100%;
     .content_wrapper {
-        transition: all $transitionNormal;
+        /* transition: all $transitionNormal; */
         text-align: center;
         margin: 0 10px;
         min-height: 100%;
